clean-up of todos and reformatting